# pf2022

./: README.md
.github/workflows/: build_and_release.yml
code/mandelbrot_sfml/: .clang-format  CMakeLists.txt  README.md  complex.cpp  complex.hpp  complex.t.cpp  main.cpp
code/sfml_shapes/: CMakeLists.txt  README.md  main.cpp
tex/: .gitignore  Makefile  basics.tex  class.tex  compilation.tex  epilog.tex  flowcontrol.tex  frontmatter.tex  functions.tex  introduction.tex  memory_management.tex  pf2022.tex  polymorphism.tex  reference.tex  static.tex  stl.tex  templates.tex
